2007-11-11  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-get-keywords)
	(ebuild-mode-put-keywords, ebuild-mode-sort-keywords)
	(ebuild-mode-modify-keywords, ebuild-mode-keyword-stable)
	(ebuild-mode-keyword-unstable, ebuild-mode-keyword-drop):
	New functions for package keyword modification.
	(ebuild-mode-arch-stable-list, ebuild-mode-arch-list)
	(ebuild-mode-keywords-regexp): New variables.
	(ebuild-mode-map): Keybindings for above.

2007-11-10  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode): Set shell to bash.
	(eselect-mode): Ditto.
	(ebuild-commands-list): New variable, replaces previous alist.
	(ebuild-run-command): Use it.
	Add local variables block to declare utf-8 encoding.

2007-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-common-lisp):
	Add common-lisp-symlink-asdf, which will obsolete
	common-lisp-system-symlink.

2007-10-11  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-flag-o-matic): Added
	missing functions from marienz' ebuild-mode
	(ebuild-mode-commands-toolchain): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-fixheadtails): Added from marienz'
	ebuild-mode
	(ebuild-mode-commands-webapp): Added from marienz' ebuild-mode
	(ebuild-mode-commands-cvs): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-bash-completion): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-vim-plugin): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-multilib): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-64-bit): Added from marienz' ebuild-mode
	(ebuild-mode-commands-toolchain-funcs): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-games): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-subversion): Added missing functions from
	marienz' ebuild-mode